<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:paddingLeft="10dp"
    android:orientation="horizontal"
    android:gravity="center_horizontal|center_vertical">
	<TableRow>
		<TextView
			android:layout_width="150dp"
			android:layout_height="wrap_content"
			android:text = "@string/vCfgConPers"
			android:textSize = "18dp"/>
		<EditText
			android:layout_width="180dp"
			android:layout_height="wrap_content"
			android:textSize = "18dp"
			android:hint = "@string/vCfgConPerson"
			android:id="@+id/vCfgConPerson"/>
	</TableRow>
	<TableRow>
		<TextView
			android:layout_width="150dp"
			android:layout_height="wrap_content"
			android:text = "@string/vCfgPho"
			android:textSize = "18dp"/>
		<EditText
			android:layout_width="180dp"
			android:layout_height="wrap_content"
			android:textSize = "18dp"
			android:hint = "@string/vCfgPhone"
			android:id="@+id/vCfgPhone"/>
	</TableRow>
	<TableRow >
	<Button
		android:layout_span="2"
		android:id="@+id/vcfgsave"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:text="@string/vcfgsave"
		android:onClick="vcfgsave"/>
	</TableRow>
</TableLayout>
